# cardealerapp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_REVIEW_REPORT.md  GIT_PUSH_INSTRUCTIONS.md  INTELLIJ_GIT_PUSH.md  LICENSE  NAMING_CONVENTIONS.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  PR_TEMPLATE.md  PULL_REQUEST.md  QUICK_SUBMIT_GUIDE.md  README.md  SUBMIT_PR_INSTRUCTIONS.md  cleanup-summary.md  generate_ppt.py  git-push.ps1  naming-review-report.md  project-structure.md  verification-report.md
java/: .gitignore  README.md  pom.xml
java/src/main/java/com/cardealer/: DealerDetails.java  FuelType.java  GearboxType.java  GeneratePpt.java  PresentationBuilder.java  PresentationConstants.java  UlezStatus.java  VehicleListing.java
python/: .pylintrc  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
python/data/: ford_kuga.json  sample_vehicle.json
python/src/cardealer/: __init__.py  __main__.py  cli.py  constants.py  models.py  presentation.py
python/tests/: __init__.py  test_cli.py  test_models.py
